TestSuite/errors/err0204.pas
var a: array of integer := new integer[5]();
begin
end.